source/css/web.css
@charset "UTF-8";

@font-face {
  font-family: "Vollkorn";
  font-weight: 400;
  font-style: normal;
  src: url("../font/Vollkorn-Regular.woff2") format("woff2");
}

@font-face {
  font-family: "Vollkorn";
  font-weight: 400;
  font-style: italic;
  src: url("../font/Vollkorn-Italic.woff2") format("woff2");
}

@font-face {
  font-family: "Vollkorn";
  font-weight: 500;
  font-style: normal;
  src: url("../font/Vollkorn-Semibold.woff2") format("woff2");
}

@font-face {
  font-family: "Vollkorn";
  font-weight: 500;
  font-style: italic;
  src: url("../font/Vollkorn-SemiboldItalic.woff2") format("woff2");
}

*, *:before, *:after {
  box-sizing: border-box;
  text-rendering: optimizelegibility;
}

:root {
  /* Baseline defaults for all devices */
  --base-unit: 5vh;
  --column-width: 50vw;
}

@supports (width: clamp(28px, 5vh, 56px)) {
  :root {
    /* Baseline defaults for all devices and browsers that support clamp() */
    /* Edge Chromium on Android has an issue with supporting clamp() for widths */
    --base-unit: clamp(28px, 5vh, 56px);
    --column-width: clamp(480px, 50vw, 640px);
  }
}

:root {
  --base-unit-half: calc( var(--base-unit) / 2.0 );

  --body-text-font-stack: "Vollkorn", serif;
  --heading-text-font-stack: "Vollkorn", serif;
  --font-size: var(--base-unit-half);
  --line-height: 1.4rem;
  --print-line-height: 1.4rem;

  --vertical-padding: var(--base-unit);

    /* this 4.0 is a bit cryptic; we are making space for the toc button:; */
  --column-height: calc(100vh - calc(var(--vertical-padding) * 4.0));
  --column-gap: var(--base-unit);

  --paper-hue: 100;
  --paper-saturation: 50%;
  --paper-lightness: 99%;
  --paper-color: hsla( var(--paper-hue), var(--paper-saturation), var(--paper-lightness), 1.0 );

  /* these are for the "shades" that obscure text on the sides of the screen in wider browsers */
  --shade-color-destination: hsla(var(--paper-hue), var(--paper-saturation), var(--paper-lightness), 0.0);
  --shade-color-origin: hsla(var(--paper-hue), var(--paper-saturation), var(--paper-lightness), 0.75);

  --spot-color: hsla(340, 100%, 50%, 1.0);
  --selection-color: hsla(340, 100%, 75%, 1.0);
  --text-color: rgb(5, 5, 5);

  --page-count: 1;
}

@media(prefers-color-scheme:dark) {
  :root {
    --paper-lightness: 1%;
    --selection-color: hsla(340, 100%, 25%, 1.0);
    --text-color: rgb(250, 250, 250);
  }
}

::-moz-selection { background: var(--selection-color); }
::selection { background: var(--selection-color); }

/* reset */
button {
  outline: none;
  border: none;
  background: none;
  background-color: transparent;
  touch-action: manipulation;
}

html {
  overflow: hidden; /* the key, always */
  font-size: var(--font-size);
  scroll-behavior: smooth;

  /* ss11 gives us the more normal 1 digit */
  font-feature-settings: "kern", "liga", "ss11";
}

body {
  margin: 0;

  height: 100vh; /* so scrollbar appears at bottom */

  background-color: var(--paper-color);
  padding: var(--vertical-padding) 0 0 0;

  overflow-x: auto;
  overflow-y: hidden;

  /* to justify or not to justify? */
  text-align: left; /* sigh */
  line-height: var(--line-height);

  color: var(--text-color);
  font-family: var(--body-text-font-stack);
  font-size: 1rem;
  font-weight: 400;
}

div.tutorial {
  display: flex;
  flex-direction: column;
  justify-content: center;

  width: var(--column-width);
  height: calc( var(--column-height) - 1px ); /* full 100vh was causing an extra page break */

  text-align: center;

  break-after: column;
}

div.tutorial h2 {
  height: auto;
  flex-grow: 0;
  margin-top: 0;
  margin-bottom: var(--line-height);

  font-family: var(--body-text-font-stack); /* a bit ugly */
}

div.tutorial p {
  flex-grow: 0;
  margin-bottom: var(--line-height);
}

button.toc-button {
  display: flex;
  position: fixed;
  bottom: 0;

  left: 50vw;

  flex-direction: column;
  justify-content: center;

  z-index: 100000;
  width: calc( var(--base-unit) * 2.0 );
  height: var(--base-unit);

  border: 1px solid var(--text-color);
  background-color: var(--paper-color);
  color: inherit;
  transform: translateX(-50%) translateY(-50%);
}

button.toc-button:hover {
  border: 1px solid var(--spot-color);
  color: var(--spot-color);
}

button.toc-button svg {
  fill: currentColor;
  flex-grow: 1;
}

nav {
  position: fixed;

  top: calc( var(--vertical-padding) + var(--base-unit) );
  /* the toc is 90% of the page's width */
  left: calc( 50vw - var(--column-width) * 0.45);

  z-index: 10000;
  /* this is all a little bit stupid and I'm sure there's a more
  principled way to do it */
  width: calc( var(--column-width) * 0.9 );
  height: calc( var(--column-height) - var(--base-unit) );

  border: 1px solid var(--spot-color);

  background-color: hsla(var(--paper-hue), calc(var(--paper-saturation) * 2.0), var(--paper-lightness), 1.0);

  overflow-x: hidden;
  overflow-y: hidden;

  text-align: left;

  transition: opacity 0.1s;

  box-shadow: 0 0 var(--base-unit-half) 1px var(--spot-color);
}

nav.visible {
  opacity: 1.0;
  pointer-events: auto;
}

nav.invisible {
  opacity: 0.0;
  pointer-events: none;
}

nav div.toc {
  width: calc( var(--column-width) * 0.9 );
  height: calc( var(--column-height) - var(--base-unit) * 2.0 );

  padding: var(--base-unit);

  overflow-x: hidden;
  overflow-y: scroll;
  position: relative;
}

nav div.close-button {
  position: fixed;
  top: calc( var(--vertical-padding) + var(--base-unit) + var(--base-unit));
  right: calc( 50vw + var(--base-unit) - var(--column-width) * 0.45);
  width: var(--base-unit-half);
  height: var(--base-unit-half);
  stroke: var(--spot-color);
  stroke-width: 1px;
}

nav div.close-button:hover {
  cursor: pointer;
}
/* ... */

